lab1a/src/decaf/frontend/Parser.output
   0  $accept : Program $end

   1  Program : ClassList

   2  ClassList : ClassList ClassDef
   3            | ClassDef

   4  VariableDef : Variable ';'

   5  Variable : Type IDENTIFIER

   6  Type : INT
   7       | VOID
   8       | BOOL
   9       | COMPLEX
  10       | STRING
  11       | CLASS IDENTIFIER
  12       | Type '[' ']'

  13  ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList '}'

  14  ExtendsClause : EXTENDS IDENTIFIER
  15                |

  16  FieldList : FieldList VariableDef
  17            | FieldList FunctionDef
  18            |

  19  Formals : VariableList
  20          |

  21  VariableList : VariableList ',' Variable
  22               | Variable

  23  FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock
  24              | Type IDENTIFIER '(' Formals ')' StmtBlock

  25  StmtBlock : '{' StmtList '}'

  26  StmtList : StmtList Stmt
  27           |

  28  Stmt : VariableDef
  29       | SimpleStmt ';'
  30       | IfStmt
  31       | WhileStmt
  32       | ForStmt
  33       | ReturnStmt ';'
  34       | PrintStmt ';'
  35       | BreakStmt ';'
  36       | StmtBlock
  37       | DOODStmt ';'

  38  SimpleStmt : LValue '=' Expr
  39             | Call
  40             |

  41  Receiver : Expr '.'
  42           |

  43  LValue : Receiver IDENTIFIER
  44         | Expr '[' Expr ']'

  45  Call : Receiver IDENTIFIER '(' Actuals ')'

  46  Expr : LValue
  47       | Call
  48       | Constant
  49       | Expr '+' Expr
  50       | Expr '-' Expr
  51       | Expr '*' Expr
  52       | Expr '/' Expr
  53       | Expr '%' Expr
  54       | Expr EQUAL Expr
  55       | Expr NOT_EQUAL Expr
  56       | Expr '<' Expr
  57       | Expr '>' Expr
  58       | Expr LESS_EQUAL Expr
  59       | Expr GREATER_EQUAL Expr
  60       | Expr AND Expr
  61       | Expr OR Expr
  62       | '(' Expr ')'
  63       | '-' Expr
  64       | '!' Expr
  65       | '@' Expr
  66       | '$' Expr
  67       | '#' Expr
  68       | READ_INTEGER '(' ')'
  69       | READ_LINE '(' ')'
  70       | THIS
  71       | SUPER
  72       | NEW IDENTIFIER '(' ')'
  73       | NEW Type '[' Expr ']'
  74       | INSTANCEOF '(' Expr ',' IDENTIFIER ')'
  75       | '(' CLASS IDENTIFIER ')' Expr
  76       | CASE '(' Expr ')' '{' CaseList DefaultExpr '}'
  77       | DCOPY '(' Expr ')'
  78       | SCOPY '(' Expr ')'

  79  Constant : LITERAL
  80           | NULL

  81  Actuals : ExprList
  82          |

  83  ExprList : ExprList ',' Expr
  84           | Expr

  85  WhileStmt : WHILE '(' Expr ')' Stmt

  86  ForStmt : FOR '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt

  87  BreakStmt : BREAK

  88  IfStmt : IF '(' Expr ')' Stmt ElseClause

  89  ElseClause : ELSE Stmt
  90             |

  91  ReturnStmt : RETURN Expr
  92             | RETURN

  93  PrintStmt : PRINT '(' ExprList ')'
  94            | PRINT_COMP '(' ExprList ')'

  95  CaseList : CaseList CaseDef
  96           |

  97  CaseDef : Constant ':' Expr ';'

  98  DefaultExpr : DEFAULT ':' Expr ';'

  99  DOODStmt : DO DOODBranch OD

 100  DOODBranch : DOODBranch DOOD DOODSubStmt
 101             | DOODSubStmt

 102  DOODSubStmt : Expr ':' Stmt

state 0
	$accept : . Program $end  (0)

	CLASS  shift 1
	.  error

	Program  goto 2
	ClassList  goto 3
	ClassDef  goto 4


state 1
	ClassDef : CLASS . IDENTIFIER ExtendsClause '{' FieldList '}'  (13)

	IDENTIFIER  shift 5
	.  error


state 2
	$accept : Program . $end  (0)

	$end  accept


state 3
	Program : ClassList .  (1)
	ClassList : ClassList . ClassDef  (2)

	CLASS  shift 1
	$end  reduce 1

	ClassDef  goto 6


state 4
	ClassList : ClassDef .  (3)

	.  reduce 3


state 5
	ClassDef : CLASS IDENTIFIER . ExtendsClause '{' FieldList '}'  (13)
	ExtendsClause : .  (15)

	EXTENDS  shift 7
	'{'  reduce 15

	ExtendsClause  goto 8


state 6
	ClassList : ClassList ClassDef .  (2)

	.  reduce 2


state 7
	ExtendsClause : EXTENDS . IDENTIFIER  (14)

	IDENTIFIER  shift 9
	.  error


state 8
	ClassDef : CLASS IDENTIFIER ExtendsClause . '{' FieldList '}'  (13)

	'{'  shift 10
	.  error


state 9
	ExtendsClause : EXTENDS IDENTIFIER .  (14)

	.  reduce 14


state 10
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' . FieldList '}'  (13)
	FieldList : .  (18)

	.  reduce 18

	FieldList  goto 11


state 11
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList . '}'  (13)
	FieldList : FieldList . VariableDef  (16)
	FieldList : FieldList . FunctionDef  (17)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	COMPLEX  shift 15
	STRING  shift 16
	CLASS  shift 17
	STATIC  shift 18
	'}'  shift 19
	.  error

	VariableDef  goto 20
	Variable  goto 21
	Type  goto 22
	FunctionDef  goto 23


state 12
	Type : VOID .  (7)

	.  reduce 7


state 13
	Type : BOOL .  (8)

	.  reduce 8


state 14
	Type : INT .  (6)

	.  reduce 6


state 15
	Type : COMPLEX .  (9)

	.  reduce 9


state 16
	Type : STRING .  (10)

	.  reduce 10


state 17
	Type : CLASS . IDENTIFIER  (11)

	IDENTIFIER  shift 24
	.  error


state 18
	FunctionDef : STATIC . Type IDENTIFIER '(' Formals ')' StmtBlock  (23)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	COMPLEX  shift 15
	STRING  shift 16
	CLASS  shift 17
	.  error

	Type  goto 25


state 19
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList '}' .  (13)

	.  reduce 13


state 20
	FieldList : FieldList VariableDef .  (16)

	.  reduce 16


state 21
	VariableDef : Variable . ';'  (4)

	';'  shift 26
	.  error


state 22
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (12)
	FunctionDef : Type . IDENTIFIER '(' Formals ')' StmtBlock  (24)

	IDENTIFIER  shift 27
	'['  shift 28
	.  error


state 23
	FieldList : FieldList FunctionDef .  (17)

	.  reduce 17


state 24
	Type : CLASS IDENTIFIER .  (11)

	.  reduce 11


state 25
	Type : Type . '[' ']'  (12)
	FunctionDef : STATIC Type . IDENTIFIER '(' Formals ')' StmtBlock  (23)

	IDENTIFIER  shift 29
	'['  shift 28
	.  error


state 26
	VariableDef : Variable ';' .  (4)

	.  reduce 4


state 27
	Variable : Type IDENTIFIER .  (5)
	FunctionDef : Type IDENTIFIER . '(' Formals ')' StmtBlock  (24)

	'('  shift 30
	';'  reduce 5


state 28
	Type : Type '[' . ']'  (12)

	']'  shift 31
	.  error


state 29
	FunctionDef : STATIC Type IDENTIFIER . '(' Formals ')' StmtBlock  (23)

	'('  shift 32
	.  error


state 30
	FunctionDef : Type IDENTIFIER '(' . Formals ')' StmtBlock  (24)
	Formals : .  (20)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	COMPLEX  shift 15
	STRING  shift 16
	CLASS  shift 17
	')'  reduce 20

	Variable  goto 33
	Type  goto 34
	Formals  goto 35
	VariableList  goto 36


state 31
	Type : Type '[' ']' .  (12)

	.  reduce 12


state 32
	FunctionDef : STATIC Type IDENTIFIER '(' . Formals ')' StmtBlock  (23)
	Formals : .  (20)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	COMPLEX  shift 15
	STRING  shift 16
	CLASS  shift 17
	')'  reduce 20

	Variable  goto 33
	Type  goto 34
	Formals  goto 37
	VariableList  goto 36


state 33
	VariableList : Variable .  (22)

	.  reduce 22


state 34
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (12)

	IDENTIFIER  shift 38
	'['  shift 28
	.  error


state 35
	FunctionDef : Type IDENTIFIER '(' Formals . ')' StmtBlock  (24)

	')'  shift 39
	.  error


state 36
	Formals : VariableList .  (19)
	VariableList : VariableList . ',' Variable  (21)

	','  shift 40
	')'  reduce 19


state 37
	FunctionDef : STATIC Type IDENTIFIER '(' Formals . ')' StmtBlock  (23)

	')'  shift 41
	.  error


state 38
	Variable : Type IDENTIFIER .  (5)

	.  reduce 5


state 39
	FunctionDef : Type IDENTIFIER '(' Formals ')' . StmtBlock  (24)

	'{'  shift 42
	.  error

	StmtBlock  goto 43


state 40
	VariableList : VariableList ',' . Variable  (21)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	COMPLEX  shift 15
	STRING  shift 16
	CLASS  shift 17
	.  error

	Variable  goto 44
	Type  goto 34


state 41
	FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' . StmtBlock  (23)

	'{'  shift 42
	.  error

	StmtBlock  goto 45


state 42
	StmtBlock : '{' . StmtList '}'  (25)
	StmtList : .  (27)

	.  reduce 27

	StmtList  goto 46


state 43
	FunctionDef : Type IDENTIFIER '(' Formals ')' StmtBlock .  (24)

	.  reduce 24


state 44
	VariableList : VariableList ',' Variable .  (21)

	.  reduce 21


state 45
	FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock .  (23)

	.  reduce 23


state 46
	StmtBlock : '{' StmtList . '}'  (25)
	StmtList : StmtList . Stmt  (26)
	SimpleStmt : .  (40)
	Receiver : .  (42)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	COMPLEX  shift 15
	STRING  shift 16
	CLASS  shift 17
	DO  shift 47
	NULL  shift 48
	THIS  shift 49
	WHILE  shift 50
	FOR  shift 51
	CASE  shift 52
	IF  shift 53
	RETURN  shift 54
	BREAK  shift 55
	NEW  shift 56
	SUPER  shift 57
	PRINT  shift 58
	PRINT_COMP  shift 59
	READ_INTEGER  shift 60
	READ_LINE  shift 61
	LITERAL  shift 62
	DCOPY  shift 63
	SCOPY  shift 64
	INSTANCEOF  shift 65
	'-'  shift 66
	'@'  shift 67
	'$'  shift 68
	'#'  shift 69
	'!'  shift 70
	'('  shift 71
	'{'  shift 42
	'}'  shift 72
	IDENTIFIER  reduce 42
	';'  reduce 40

	VariableDef  goto 73
	Variable  goto 21
	Type  goto 34
	StmtBlock  goto 74
	Stmt  goto 75
	SimpleStmt  goto 76
	IfStmt  goto 77
	WhileStmt  goto 78
	ForStmt  goto 79
	ReturnStmt  goto 80
	PrintStmt  goto 81
	BreakStmt  goto 82
	DOODStmt  goto 83
	LValue  goto 84
	Expr  goto 85
	Call  goto 86
	Receiver  goto 87
	Constant  goto 88


state 47
	DOODStmt : DO . DOODBranch OD  (99)
	Receiver : .  (42)

	NULL  shift 48
	THIS  shift 49
	CASE  shift 52
	NEW  shift 56
	SUPER  shift 57
	READ_INTEGER  shift 60
	READ_LINE  shift 61
	LITERAL  shift 62
	DCOPY  shift 63
	SCOPY  shift 64
	INSTANCEOF  shift 65
	'-'  shift 66
	'@'  shift 67
	'$'  shift 68
	'#'  shift 69
	'!'  shift 70
	'('  shift 71
	IDENTIFIER  reduce 42

	LValue  goto 89
	Expr  goto 90
	Call  goto 91
	Receiver  goto 87
	Constant  goto 88
	DOODBranch  goto 92
	DOODSubStmt  goto 93


state 48
	Constant : NULL .  (80)

	.  reduce 80


state 49
	Expr : THIS .  (70)

	.  reduce 70


state 50
	WhileStmt : WHILE . '(' Expr ')' Stmt  (85)

	'('  shift 94
	.  error


state 51
	ForStmt : FOR . '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt  (86)

	'('  shift 95
	.  error


state 52
	Expr : CASE . '(' Expr ')' '{' CaseList DefaultExpr '}'  (76)

	'('  shift 96
	.  error


state 53
	IfStmt : IF . '(' Expr ')' Stmt ElseClause  (88)

	'('  shift 97
	.  error


state 54
	ReturnStmt : RETURN . Expr  (91)
	ReturnStmt : RETURN .  (92)
	Receiver : .  (42)

	NULL  shift 48
	THIS  shift 49
	CASE  shift 52
	NEW  shift 56
	SUPER  shift 57
	READ_INTEGER  shift 60
	READ_LINE  shift 61
	LITERAL  shift 62
	DCOPY  shift 63
	SCOPY  shift 64
	INSTANCEOF  shift 65
	'-'  shift 66
	'@'  shift 67
	'$'  shift 68
	'#'  shift 69
	'!'  shift 70
	'('  shift 71
	IDENTIFIER  reduce 42
	';'  reduce 92

	LValue  goto 89
	Expr  goto 98
	Call  goto 91
	Receiver  goto 87
	Constant  goto 88


state 55
	BreakStmt : BREAK .  (87)

	.  reduce 87


state 56
	Expr : NEW . IDENTIFIER '(' ')'  (72)
	Expr : NEW . Type '[' Expr ']'  (73)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	COMPLEX  shift 15
	STRING  shift 16
	CLASS  shift 17
	IDENTIFIER  shift 99
	.  error

	Type  goto 100


state 57
	Expr : SUPER .  (71)

	.  reduce 71


state 58
	PrintStmt : PRINT . '(' ExprList ')'  (93)

	'('  shift 101
	.  error


state 59
	PrintStmt : PRINT_COMP . '(' ExprList ')'  (94)

	'('  shift 102
	.  error


state 60
	Expr : READ_INTEGER . '(' ')'  (68)

	'('  shift 103
	.  error


state 61
	Expr : READ_LINE . '(' ')'  (69)

	'('  shift 104
	.  error


state 62
	Constant : LITERAL .  (79)

	.  reduce 79


state 63
	Expr : DCOPY . '(' Expr ')'  (77)

	'('  shift 105
	.  error


state 64
	Expr : SCOPY . '(' Expr ')'  (78)

	'('  shift 106
	.  error


state 65
	Expr : INSTANCEOF . '(' Expr ',' IDENTIFIER ')'  (74)

	'('  shift 107
	.  error


state 66
	Expr : '-' . Expr  (63)
	Receiver : .  (42)

	NULL  shift 48
	THIS  shift 49
	CASE  shift 52
	NEW  shift 56
	SUPER  shift 57
	READ_INTEGER  shift 60
	READ_LINE  shift 61
	LITERAL  shift 62
	DCOPY  shift 63
	SCOPY  shift 64
	INSTANCEOF  shift 65
	'-'  shift 66
	'@'  shift 67
	'$'  shift 68
	'#'  shift 69
	'!'  shift 70
	'('  shift 71
	IDENTIFIER  reduce 42

	LValue  goto 89
	Expr  goto 108
	Call  goto 91
	Receiver  goto 87
	Constant  goto 88


state 67
	Expr : '@' . Expr  (65)
	Receiver : .  (42)

	NULL  shift 48
	THIS  shift 49
	CASE  shift 52
	NEW  shift 56
	SUPER  shift 57
	READ_INTEGER  shift 60
	READ_LINE  shift 61
	LITERAL  shift 62
	DCOPY  shift 63
	SCOPY  shift 64
	INSTANCEOF  shift 65
	'-'  shift 66
	'@'  shift 67
	'$'  shift 68
	'#'  shift 69
	'!'  shift 70
	'('  shift 71
	IDENTIFIER  reduce 42

	LValue  goto 89
	Expr  goto 109
	Call  goto 91
	Receiver  goto 87
	Constant  goto 88


state 68
	Expr : '$' . Expr  (66)
	Receiver : .  (42)

	NULL  shift 48
	THIS  shift 49
	CASE  shift 52
	NEW  shift 56
	SUPER  shift 57
	READ_INTEGER  shift 60
	READ_LINE  shift 61
	LITERAL  shift 62
	DCOPY  shift 63
	SCOPY  shift 64
	INSTANCEOF  shift 65
	'-'  shift 66
	'@'  shift 67
	'$'  shift 68
	'#'  shift 69
	'!'  shift 70
	'('  shift 71
	IDENTIFIER  reduce 42

	LValue  goto 89
	Expr  goto 110
	Call  goto 91
	Receiver  goto 87
	Constant  goto 88


state 69
	Expr : '#' . Expr  (67)
	Receiver : .  (42)

	NULL  shift 48
	THIS  shift 49
	CASE  shift 52
	NEW  shift 56
	SUPER  shift 57
	READ_INTEGER  shift 60
	READ_LINE  shift 61
	LITERAL  shift 62
	DCOPY  shift 63
	SCOPY  shift 64
	INSTANCEOF  shift 65
	'-'  shift 66
	'@'  shift 67
	'$'  shift 68
	'#'  shift 69
	'!'  shift 70
	'('  shift 71
	IDENTIFIER  reduce 42

	LValue  goto 89
	Expr  goto 111
	Call  goto 91
	Receiver  goto 87
	Constant  goto 88


state 70
	Expr : '!' . Expr  (64)
	Receiver : .  (42)

	NULL  shift 48
	THIS  shift 49
	CASE  shift 52
	NEW  shift 56
	SUPER  shift 57
	READ_INTEGER  shift 60
	READ_LINE  shift 61
	LITERAL  shift 62
	DCOPY  shift 63
	SCOPY  shift 64
	INSTANCEOF  shift 65
	'-'  shift 66
	'@'  shift 67
	'$'  shift 68
	'#'  shift 69
	'!'  shift 70
	'('  shift 71
	IDENTIFIER  reduce 42

	LValue  goto 89
	Expr  goto 112
	Call  goto 91
	Receiver  goto 87
	Constant  goto 88


state 71
	Expr : '(' . Expr ')'  (62)
	Expr : '(' . CLASS IDENTIFIER ')' Expr  (75)
	Receiver : .  (42)
